BUILD unofficial package for Debian/Buster(stable)
NOTE: also requires pyside_1.2.2-2~buster,
which I'll publish alongside with this package

https://lumiera.org/debian/pool/tool/p/pyside/
https://lumiera.org/debian/pool/tool/n/natron/
https://lumiera.org/debian/pool/tool/o/opencolorio-configs-natron/
https://lumiera.org/debian/pool/tool/o/openfx-io-natron/
https://lumiera.org/debian/pool/tool/o/openfx-misc-natron/
https://lumiera.org/debian/pool/tool/o/openfx-arena-natron/

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-natron (2.3.14+libs-1+buster) Lumiera-buster-tools; urgency=low
+natron (2.3.15~rc14+libs-1+buster) Lumiera-buster-tool; urgency=low
+
+  * New Upstream Release (actually RC14).
+  * Rebuild for use on Debian/Buster(stable).
+
+ -- Hermann Vosseler <deb@ichthyostega.de>  Sun, 19 Jan 2020 01:16:58 +0100
+
+natron (2.3.14+libs-1+buster) UNRELEASED; urgency=low
 
   * Rebuild for use on Debian/Buster(stable).
   * Repackaged orig-tree from Git, including git submodules:
