--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+natron (2.3.15~rc14+libs-1ppa1~eoan1) eoan; urgency=low
+
+  * New Upstream Release (actually RC14).
+  * Repackaged orig-tree from Git, including git submodules:
+    - libs/OpenFX (the OpenFX API)
+    - libs/SequenceParsing
+  * Rebuild for Ubuntu/Eoan (19.10)
+
+ -- Hermann Vosseler <deb@ichthyostega.de>  Sun, 19 Jan 2020 04:16:00 +0100
+
 natron (2.3.15~rc14+libs-1+buster) Lumiera-buster-tool; urgency=low
 
   * New Upstream Release (actually RC14).
